--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,7 @@
 $body-color: white;
+$menu-color: black;
+$block-size: 12.5%;
+$block-margin: 2%;
+$common-coef: 20%;
+$menu-w: 100vmin;
+$menu-h: 80vmin;
