--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import './_variables.scss';
+@import './positions';
 
 body {
   background-color: $body-color;
@@ -12,4 +13,12 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+.element-container {
+  margin: auto;
+  position: relative;
+  height: $menu-h;
+  width: $menu-w;;
+  background-color: $menu-color;
 }
